crates/functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_known_values.snap
---
source: crates/functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT\n        HEX_ENCODE('A') AS should_be_41,\n        HEX_ENCODE('Hello') AS should_be_48656C6C6F,\n        HEX_ENCODE('0') AS should_be_30,\n        HEX_ENCODE('!') AS should_be_21\""
---
Ok(
    [
        "+--------------+----------------------+--------------+--------------+",
        "| should_be_41 | should_be_48656c6c6f | should_be_30 | should_be_21 |",
        "+--------------+----------------------+--------------+--------------+",
        "| 41           | 48656C6C6F           | 30           | 21           |",
        "+--------------+----------------------+--------------+--------------+",
    ],
)
