crates/functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_null_case.snap
---
source: crates/functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT HEX_ENCODE('test', NULL) AS hex_value\""
---
Ok(
    [
        "+-----------+",
        "| hex_value |",
        "+-----------+",
        "| 74657374  |",
        "+-----------+",
    ],
)
