crates/functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_special_chars.snap
---
source: crates/functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT HEX_ENCODE('Hello, World!') AS hex_value\""
---
Ok(
    [
        "+----------------------------+",
        "| hex_value                  |",
        "+----------------------------+",
        "| 48656C6C6F2C20576F726C6421 |",
        "+----------------------------+",
    ],
)
