crates/functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_table_data.snap
---
source: crates/functions/src/tests/string_binary/hex_encode.rs
description: "\"WITH test_data AS (\n        SELECT 'Hello' AS text_col, 1 AS case_col\n        UNION ALL\n        SELECT 'World', 0\n        UNION ALL\n        SELECT 'Test', 1\n        UNION ALL\n        SELECT '', 0\n        UNION ALL\n        SELECT NULL, 1\n    )\n    SELECT\n        text_col,\n        case_col,\n        HEX_ENCODE(text_col) AS hex_default,\n        HEX_ENCODE(text_col, case_col) AS hex_with_case\n    FROM test_data\n    ORDER BY text_col NULLS LAST\""
---
Ok(
    [
        "+----------+----------+-------------+---------------+",
        "| text_col | case_col | hex_default | hex_with_case |",
        "+----------+----------+-------------+---------------+",
        "|          | 0        |             |               |",
        "| Hello    | 1        | 48656C6C6F  | 48656C6C6F    |",
        "| Test     | 1        | 54657374    | 54657374      |",
        "| World    | 0        | 576F726C64  | 576f726c64    |",
        "|          | 1        |             |               |",
        "+----------+----------+-------------+---------------+",
    ],
)
