crates/functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_unicode.snap
---
source: crates/functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT HEX_ENCODE('Hello, 世界!') AS hex_value\""
---
Ok(
    [
        "+------------------------------+",
        "| hex_value                    |",
        "+------------------------------+",
        "| 48656C6C6F2C20E4B896E7958C21 |",
        "+------------------------------+",
    ],
)
